--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -62,32 +62,19 @@
             <div class="row mt-5 p-5 service-box">
                 <form>
                     <div class="form-group">
-                        <label for="exampleFormControlInput1">Email address</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                        <label for="exampleFormControlInput1">Topic of Query</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" value="Concrete Coring">
                     </div>
                     <div class="form-group">
-                        <label for="exampleFormControlSelect1">Example select</label>
-                        <select class="form-control" id="exampleFormControlSelect1">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                        </select>
+                        <label for="exampleFormControlInput1">Your Email address</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1">
                     </div>
                     <div class="form-group">
-                        <label for="exampleFormControlSelect2">Example multiple select</label>
-                        <select multiple class="form-control" id="exampleFormControlSelect2">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                        </select>
+                        <label for="exampleFormControlTextarea1">Details of Your Query</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
                     </div>
-                    <div class="form-group">
-                        <label for="exampleFormControlTextarea1">Example textarea</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <div class="row px-2">
+                        <input type="submit" value="Send Request" class="btn btn-success mt-3 CIK-button"/>
                     </div>
                 </form>
             </div>
