--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -59,8 +59,8 @@
                 </div>
                 </div>
             </div>
-            <div class="row mt-5 p-5 service-box">
-                <form>
+            <div class="row mt-5 p-5 service-box justify-content-center">
+                <form class="col-10 col-lg-9 col-xxl-7">
                     <div class="form-group">
                         <label for="exampleFormControlInput1">Topic of Query</label>
                         <input type="email" class="form-control" id="exampleFormControlInput1" value="Concrete Coring">
