--- a/index.html
+++ b/index.html
@@ -19,11 +19,73 @@
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
     <script src="https://kit.fontawesome.com/cd5674c3b8.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="assets/js/headerFooterManager.js"></script>
     <script type="text/javascript" src="assets/js/headManager.js"></script>
 </head>
 <body class="d-flex flex-column min-vh-100">
-    <special-header></special-header>
+    <!-- Header -->
+    <div class="d-flex justify-content-center py-1" id="nav-header">
+        <a id="site-title" class="navbar-brand fw-bold ms-lg-2 d-inline-block" href="../index.html">CONCRETE • INSIGHT • UK</a>
+        <div class="navbar ms-5 d-lg-none">
+            <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </div>
+    <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary p-0 text-uppercase">
+        <div class="container-fluid py-0">
+            <div class="collapse navbar-collapse d-lg-flex justify-content-lg-center" id="navbarSupportedContent">
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item mx-1">
+                        <a class="nav-link active p-3" aria-current="page" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown mx-1 hover-underline-animation">
+                    <a class="nav-link dropdown-toggle p-3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Intrusive Investigations
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="service-pages/intrusive-investigations.html">Concrete Coring</a></li>
+                        <li><a class="dropdown-item" href="#">Dust Sampling</a></li>
+                        <li><a class="dropdown-item" href="#">Conrete Breakouts</a></li>
+                        <li><a class="dropdown-item" href="#">Pull Testing</a></li>
+                        <li><a class="dropdown-item" href="#">Half Cell Potential Surveys</a></li>
+                    </ul>
+                    </li>
+                    <li class="nav-item dropdown mx-1 hover-underline-animation">
+                        <a class="nav-link dropdown-toggle p-3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Non-Intrusive Surveys
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Ferroscanning</a></li>
+                            <li><a class="dropdown-item" href="#">Ground Penetrating Radar</a></li>
+                            <li><a class="dropdown-item" href="#">Defect Surveys</a></li>
+                            <li><a class="dropdown-item" href="#">Dimensional Surveys</a></li>
+                            <li><a class="dropdown-item" href="#">Rebound Hammer Surveys</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown mx-1 hover-underline-animation">
+                        <a class="nav-link dropdown-toggle p-3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Testing
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Carbonation Testing</a></li>
+                            <li><a class="dropdown-item" href="#">Chloride Ion Testing</a></li>
+                            <li><a class="dropdown-item" href="#">HAC Determination</a></li>
+                            <li><a class="dropdown-item" href="#">Compressive Strength Testing</a></li>
+                            <li><a class="dropdown-item" href="#">Sulphide Testing</a></li>
+                            <li><a class="dropdown-item" href="#">Total Alkali Testing</a></li>
+                            <li><a class="dropdown-item" href="#">Petrographic Testing</a></li>
+                            <li><a class="dropdown-item" href="#">Cement Content</a></li>
+                            <li><a class="dropdown-item" href="#">Moisture Content</a></li>
+                            <li><a class="dropdown-item" href="#">Mixed Mortar Analysis</a></li>
+                            <li><a class="dropdown-item" href="#">Tensile Strength</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item mx-1 me-1 me-lg-4 hover-underline-animation">
+                        <a class="nav-link p-3" aria-current="page" href="#">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <!-- Carousel -->
     <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -78,6 +140,7 @@
             </span>
         </button>
     </div>
+    <!-- Index Page Information -->
     <section id="index-information" class="py-5 container-fluid oswald-font blue-gradient">
         <div class="row d-flex align-items-center">
             <div class="col-1"></div>
@@ -103,6 +166,7 @@
             <div class="col-1"></div>
         </div>
     </section>
+    <!-- Cards With Selected Services -->
     <section id="index-tabs" class="py-5 px-3 container-fluid oswald-font">
         <div class="row justify-content-evenly mx-3">
             <div data-inviewport="fade-up" class="col-sm-6 col-lg-4 my-2 d-flex justify-content-center">
@@ -167,7 +231,23 @@
             </div>
         </div>
     </section>
-    <special-footer></special-footer>
+    <!-- Map and Footer -->
+    <div id="map" class="border-top"></div>
+    <footer class="d-flex flex-wrap justify-content-evenly align-items-center py-4 border-top">
+        <div class="col-4 d-flex align-items-center">
+        <span class="text-muted">© 2025 Concrete Insight UK
+        <br><br>
+        Some images provided by <a class="inherit-color" href="https://www.freepik.com/">Freepik</a>
+        </span>
+        </div>
+    
+        <ul class="nav col-6 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-square-facebook fa-2xl"></i></li>
+            <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-google fa-xl"></i></li>
+            <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-square-instagram fa-2xl"></i></li>
+        </ul>
+    </footer>
+    <!-- Post-DOM Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script type="module" src="assets/js/script.js"></script>
 </body>
