--- a/service-pages/intrusive-investigations.html
+++ b/service-pages/intrusive-investigations.html
@@ -19,67 +19,145 @@
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
     <script src="https://kit.fontawesome.com/cd5674c3b8.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="../assets/js/headerFooterManager.js"></script>
     <script type="text/javascript" src="../assets/js/headManager.js"></script>
 </head>
 <body class="d-flex flex-column min-vh-100">
-    <special-header></special-header>
-        <div class="row justify-content-center service-background pt-5">
-            <div data-inviewport="fade-up" class="col-10 col-lg-9 col-xxl-7 service-box">
-                <div class="row align-items-stretch">
-                <!-- left column split vertically -->
-                <div class="col-12 col-lg-6 px-0 d-flex flex-column">
-                    <!-- first half -->
-                    <div class="flex-fill d-flex justify-content-center align-items-center border-bottom">
-                    <div class="text-center px-5">
-                        <h2 class="mt-3 pt-5 pt-lg-0">Concrete Coring</h2>
-                        <hr>
-                        <p class="pb-5 pb-lg-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                    </div>
-                    </div>
-                    <!-- second half -->
-                    <div class="flex-fill d-flex flex-column white justify-content-center text-center px-5">
-                        <p class="pb-3 pt-5 pt-lg-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-                        <div class="row justify-content-evenly pb-5 pb-lg-3">
-                            <div class="col-1"></div>
-                            <button type="button" class="col-12 col-md-4 btn btn-lg btn-primary CIK-button">Primary</button>
-                            <div class="col-1"></div>
-                            <button type="button" class="col-12 col-md-4 btn btn-lg btn-secondary CIK-button mt-3 mt-md-0">Secondary</button>
-                            <div class="col-1"></div>
-                        </div>
-                    </div>
-                </div>
-                <!-- right image column (drives the row height) -->
-                <div class="d-none d-lg-block col-6 px-0 align-content-center">
-                    <img
-                    src="../assets/images/PrellerProvidedPhotos/Coring/coring-5.jpeg"
-                    class="img-fluid w-100"
-                    alt="..."
-                    />
-                </div>
-                </div>
-            </div>
-            <div class="row mt-5 p-5 service-box justify-content-center">
-                <form class="col-10 col-lg-9 col-xxl-7">
-                    <div class="form-group">
-                        <label for="exampleFormControlInput1">Topic of Query</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" value="Concrete Coring">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleFormControlInput1">Your Email address</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleFormControlTextarea1">Details of Your Query</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
-                    </div>
-                    <div class="row px-2">
-                        <input type="submit" value="Send Request" class="btn btn-success mt-3 CIK-button"/>
-                    </div>
-                </form>
+    <!-- Header -->
+    <div class="d-flex justify-content-center py-1" id="nav-header">
+        <a id="site-title" class="navbar-brand fw-bold ms-lg-2 d-inline-block" href="../index.html">CONCRETE • INSIGHT • UK</a>
+        <div class="navbar ms-5 d-lg-none">
+            <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </div>
+    <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary p-0 text-uppercase">
+        <div class="container-fluid py-0">
+            <div class="collapse navbar-collapse d-lg-flex justify-content-lg-center" id="navbarSupportedContent">
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item mx-1">
+                        <a class="nav-link p-3" aria-current="page" href="../index.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown mx-1 hover-underline-animation">
+                    <a class="nav-link dropdown-toggle p-3 active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Intrusive Investigations
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item active" href="service-pages/intrusive-investigations.html">Concrete Coring</a></li>
+                        <li><a class="dropdown-item" href="#">Dust Sampling</a></li>
+                        <li><a class="dropdown-item" href="#">Conrete Breakouts</a></li>
+                        <li><a class="dropdown-item" href="#">Pull Testing</a></li>
+                        <li><a class="dropdown-item" href="#">Half Cell Potential Surveys</a></li>
+                    </ul>
+                    </li>
+                    <li class="nav-item dropdown mx-1 hover-underline-animation">
+                        <a class="nav-link dropdown-toggle p-3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Non-Intrusive Surveys
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Ferroscanning</a></li>
+                            <li><a class="dropdown-item" href="#">Ground Penetrating Radar</a></li>
+                            <li><a class="dropdown-item" href="#">Defect Surveys</a></li>
+                            <li><a class="dropdown-item" href="#">Dimensional Surveys</a></li>
+                            <li><a class="dropdown-item" href="#">Rebound Hammer Surveys</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown mx-1 hover-underline-animation">
+                        <a class="nav-link dropdown-toggle p-3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Testing
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Carbonation Testing</a></li>
+                            <li><a class="dropdown-item" href="#">Chloride Ion Testing</a></li>
+                            <li><a class="dropdown-item" href="#">HAC Determination</a></li>
+                            <li><a class="dropdown-item" href="#">Compressive Strength Testing</a></li>
+                            <li><a class="dropdown-item" href="#">Sulphide Testing</a></li>
+                            <li><a class="dropdown-item" href="#">Total Alkali Testing</a></li>
+                            <li><a class="dropdown-item" href="#">Petrographic Testing</a></li>
+                            <li><a class="dropdown-item" href="#">Cement Content</a></li>
+                            <li><a class="dropdown-item" href="#">Moisture Content</a></li>
+                            <li><a class="dropdown-item" href="#">Mixed Mortar Analysis</a></li>
+                            <li><a class="dropdown-item" href="#">Tensile Strength</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item mx-1 me-1 me-lg-4 hover-underline-animation">
+                        <a class="nav-link p-3" aria-current="page" href="#">Contact Us</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    <special-footer></special-footer>
+    </nav>
+    <div class="row justify-content-center service-background pt-5">
+        <div class="col-10 col-lg-9 col-xxl-7 service-box">
+            <div class="row align-items-stretch">
+            <!-- left column split vertically -->
+            <div class="col-12 col-lg-6 px-0 d-flex flex-column">
+                <!-- first half -->
+                <div class="flex-fill d-flex justify-content-center align-items-center border-bottom">
+                <div class="text-center px-5">
+                    <h2 class="mt-3 pt-5 pt-lg-0">Concrete Coring</h2>
+                    <hr>
+                    <p class="pb-5 pb-lg-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                </div>
+                </div>
+                <!-- second half -->
+                <div class="flex-fill d-flex flex-column white justify-content-center text-center px-5">
+                    <p class="pb-3 pt-5 pt-lg-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                    <div class="row justify-content-evenly pb-5 pb-lg-3">
+                        <div class="col-1"></div>
+                        <button type="button" class="col-12 col-md-4 btn btn-lg btn-primary CIK-button">Primary</button>
+                        <div class="col-1"></div>
+                        <button type="button" class="col-12 col-md-4 btn btn-lg btn-secondary CIK-button mt-3 mt-md-0">Secondary</button>
+                        <div class="col-1"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- right image column (drives the row height) -->
+            <div class="d-none d-lg-block col-6 px-0 align-content-center">
+                <img
+                src="../assets/images/PrellerProvidedPhotos/Coring/coring-5.jpeg"
+                class="img-fluid w-100"
+                alt="..."
+                />
+            </div>
+            </div>
+        </div>
+        <div class="row mt-5 p-5 blue-gradient justify-content-center">
+            <form class="col-10 col-lg-9 col-xxl-7">
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Topic of Query</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" value="Concrete Coring">
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Your Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1">
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Details of Your Query</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="8"></textarea>
+                </div>
+                <div class="row px-2">
+                    <input type="submit" value="Send Request" class="btn btn-success mt-3 CIK-button"/>
+                </div>
+            </form>
+        </div>
+    </div>
+    <!-- Map and Footer -->
+    <div id="map"></div>
+    <footer class="d-flex flex-wrap justify-content-evenly align-items-center py-4 border-top">
+        <div class="col-4 d-flex align-items-center">
+        <span class="text-muted">© 2025 Concrete Insight UK
+        <br><br>
+        Some images provided by <a class="inherit-color" href="https://www.freepik.com/">Freepik</a>
+        </span>
+        </div>
+    
+        <ul class="nav col-6 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-square-facebook fa-2xl"></i></li>
+            <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-google fa-xl"></i></li>
+            <li class="ms-3"><a class="text-muted" href="#"><i class="fa-brands fa-square-instagram fa-2xl"></i></li>
+        </ul>
+    </footer>
+    <!-- Post-DOM Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <script type="module" src="../assets/js/script.js"></script>
 </body>
